--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,5 @@
-*{
-    width: 100%;
-    margin: 100%;
-}
-
 .header{
-    width: 25px;
-}
-
-.bottom{
-    color: blue;
-    background: none;
+    margin: 20px;
     align-items: center;
-    text-align: center;
-}
-
-#button{
-    text-align: center;
-    font-size: medium;
-    background: yellow;
+    display: flex;
 }
